force-app/main/default/objects/Attendees__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Localização geográfica principal do participante.</description>
    <inlineHelpText>Selecione o endereço associado a este participante.</inlineHelpText>
    <label>Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>