force-app/main/default/objects/Attendees__c/fields/Company_Instituition_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Instituition_Name__c</fullName>
    <description>Instituição ou empresa a qual o participante pertence.</description>
    <inlineHelpText>Informe o nome da clínica ou empresa onde trabalha.</inlineHelpText>
    <label>Company/Instituition Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>