force-app/main/default/objects/Attendees__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>E-mail de contato para envio de confirmações e ingressos.</description>
    <inlineHelpText>Informe o e-mail principal do participante.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>