force-app/main/default/objects/Attendees__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Telefone de contato para urgências.</description>
    <inlineHelpText>Digite o telefone com código de área.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>